[tool.poetry]
name = "apk-extractor"
version = "0.1.0"
description = "A tool to download apk from google play store"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"
Flask-RESTful = "0.3.8"
gpapi = "0.4.4"
ipdb = "0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
